--- a/pom.xml
+++ b/pom.xml
@@ -3,12 +3,12 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>market-data-service</groupId>
 	<artifactId>market-data-service</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0-SNAPSHOT</version>
 	<name>market-data-service</name>
 	<packaging>jar</packaging>
 
 	<properties>
-		<scala.version>2.8.1</scala.version>
+		<scala.version>2.9.1</scala.version>
 	</properties>
 
 	<dependencies>
@@ -30,13 +30,13 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.8.1</version>
+			<version>4.8.2</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.scalatest</groupId>
-			<artifactId>scalatest</artifactId>
-			<version>1.3</version>
+			<artifactId>scalatest_2.9.0</artifactId>
+			<version>1.6.1</version>
 			<scope>test</scope>
 		</dependency>		
 		<dependency>
@@ -61,7 +61,7 @@
 			<plugin>
 				<groupId>org.scala-tools</groupId>
 				<artifactId>maven-scala-plugin</artifactId>
-				<version>2.14.1</version>
+				<version>2.15.2</version>
 				<executions>
 					<execution>
 						<goals>
